kubernetes/legacy/apps/bookstack/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bookstack
  namespace: apps
spec:
  parentRefs:
    - name: homeserver-gateway
      namespace: infra
  hostnames:
    - "bookstack.k8s.local"
  rules:
    - backendRefs:
        - name: bookstack
          port: 80
